[package]
name = "link-sweep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
codegen-units = 1
opt-level = 3

[profile.dev]
debug = true
codegen-units = 1
opt-level = 3

[dependencies]
rand = "0.9.0-alpha.1"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.5.0"
zip = "2.1.3"
tmpdir = "1.0.0"
tmpfile = "0.0.2"
regex = "1.10.5"
filetime = "0.2.23"
windows-sys = "0.52.0"
chrono = "0.4.38"
dunce = "1.0.4"
indicatif = "0.17.8"
